--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -71,8 +71,8 @@
             <div class="card-info">
               <h2>Terminal Snake Game 🐍</h2>
               <p>
-                Classic snake game implemented in Python, playable in a terminal
-                interface.
+                A nostalgic take on the Snake game, built in Python and played entirely in your terminal. Great for practicing game loops and real-time input handling.
+                <a href="#" class="project-link">See it for yourself !!</a>
               </p>
             </div>
           </div>
@@ -80,14 +80,20 @@
           <!-- Card 2 -->
           <div class="project-card reverse">
             <div class="card-info">
-              <h2>Greeting Card Apps 💌</h2>
+              <h2>Parallax Website 💌</h2>
               <p>
-                A modern web app built with React and styled with Tailwind CSS,
-                featuring dynamic greeting card designs.
+                A responsive and visually engaging website featuring parallax
+                scrolling effects, built with semantic HTML, modern CSS, and
+                vanilla JavaScript. Designed to showcase creative UI
+                interactions and smooth user experience.
+                <a href="#" class="project-link">See it for yourself !!</a>
               </p>
             </div>
             <div class="card-image">
-              <img src="/images/Web.png" alt="Greeting Card App Project" />
+              <img
+                src="/images/Screenshot 2025-05-14 101558.png"
+                alt="Greeting Card App Project"
+              />
             </div>
           </div>
 
@@ -102,8 +108,10 @@
             <div class="card-info">
               <h2>Shapemaker App 🔴</h2>
               <p>
-                A creative Python Turtle project for generating shapes with
-                simplicity.
+                An interactive project utilizing Python's Turtle module to
+                generate geometric patterns with clean and efficient code. Ideal
+                for demonstrating basic programming logic and visual creativity.
+                <a href="#" class="project-link">See it for yourself !!</a>
               </p>
             </div>
           </div>
