--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -72,7 +72,7 @@
               <h2>Terminal Snake Game 🐍</h2>
               <p>
                 A nostalgic take on the Snake game, built in Python and played entirely in your terminal. Great for practicing game loops and real-time input handling.
-                <a href="#" class="project-link">See it for yourself !!</a>
+                <a href="https://github.com/Arf-012/Snakeeeee" class="project-link" target="_blank" rel="noopener">See it for yourself !!</a>
               </p>
             </div>
           </div>
@@ -86,7 +86,7 @@
                 scrolling effects, built with semantic HTML, modern CSS, and
                 vanilla JavaScript. Designed to showcase creative UI
                 interactions and smooth user experience.
-                <a href="#" class="project-link">See it for yourself !!</a>
+                <a href="https://parallax-tau-woad.vercel.app/" class="project-link" target="_blank" rel="noopener">See it for yourself !!</a>
               </p>
             </div>
             <div class="card-image">
@@ -101,17 +101,17 @@
           <div class="project-card">
             <div class="card-image">
               <img
-                src="/images/Love.png"
+                src="/images/Screenshot 2025-05-14 235302.png"
                 alt="Python Turtle Shapemaker Project"
               />
             </div>
             <div class="card-info">
               <h2>Shapemaker App 🔴</h2>
               <p>
-                An interactive project utilizing Python's Turtle module to
+                An interactive project utilizing HTML, CSS and Javascript to
                 generate geometric patterns with clean and efficient code. Ideal
                 for demonstrating basic programming logic and visual creativity.
-                <a href="#" class="project-link">See it for yourself !!</a>
+                <a href="https://shapemaker.vercel.app/" class="project-link" target="_blank" rel="noopener">See it for yourself !!</a>
               </p>
             </div>
           </div>
