--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
     </header>
 
-    <img src="/images/Kicau.png" alt="logo" class="burung" />
+    <img src="images/Kicau.png" alt="logo" class="burung" />
 
     <main>
       <section class="intro">
@@ -32,7 +32,7 @@
       <section class="about">
         <div class="row">
           <div class="about-col-1" id="abouts">
-            <img src="/images/Chipmunk.jpeg" alt="Chipmunk" />
+            <img src="images/Chipmunk.jpeg" alt="Chipmunk" />
           </div>
           <div class="about-col-2">
             <h1>About Me 🚀</h1>
@@ -66,7 +66,7 @@
           <!-- Card 1 -->
           <div class="project-card">
             <div class="card-image">
-              <img src="/images/Snake.png" alt="Terminal Snake Game Project" />
+              <img src="images/Snake.png" alt="Terminal Snake Game Project" />
             </div>
             <div class="card-info">
               <h2>Terminal Snake Game 🐍</h2>
@@ -91,7 +91,7 @@
             </div>
             <div class="card-image">
               <img
-                src="/images/Screenshot 2025-05-14 101558.png"
+                src="images/Screenshot 2025-05-14 101558.png"
                 alt="Greeting Card App Project"
               />
             </div>
@@ -101,7 +101,7 @@
           <div class="project-card">
             <div class="card-image">
               <img
-                src="/images/Screenshot 2025-05-14 235302.png"
+                src="images/Screenshot 2025-05-14 235302.png"
                 alt="Python Turtle Shapemaker Project"
               />
             </div>
